# Cmake_learn

./: CMake大一统.md  Find_package.md  Readme.md  再探静态库与动态库(Linux).md  编写CMake的最底层逻辑.md  花式摆弄静态库与动态库.md  迈向Modern_CMake.md  静态库和动态库.md
CMake大一统/cmake_study/: CMakeLists.txt
CMake大一统/cmake_study/lesson3_1/: add.i  add.s  main.cpp  main.i  main.s
CMake大一统/cmake_study/lesson3_2/: CMakeLists.txt
Find_package/opencv/: CMakeLists.txt
Find_package/opencv/lesson6_1/: CMakeLists.txt
再探静态库与动态库(Linux)/cmake_study/: CMakeLists.txt
再探静态库与动态库(Linux)/cmake_study/lesson4_1/: CMakeLists.txt
再探静态库与动态库(Linux)/cmake_study/lesson4_2/: CMakeLists.txt
编写CMake的最底层逻辑/: CMakeLists.txt
编写CMake的最底层逻辑/lesson1_1/: CMakeLists.txt  main.cpp
编写CMake的最底层逻辑/lesson1_2/: CMakeLists.txt
花式摆弄静态库与动态库/cmake_study/: CMakeLists.txt
花式摆弄静态库与动态库/cmake_study/lesson7_1/: CMakeLists.txt  main.cpp
花式摆弄静态库与动态库/cmake_study/lesson7_1/calculator/: CMakeLists.txt  calculator.cpp  calculator.hpp
花式摆弄静态库与动态库/cmake_study/lesson7_2/: CMakeLists.txt
花式摆弄静态库与动态库/cmake_study/lesson7_2/add/: CMakeLists.txt
花式摆弄静态库与动态库/cmake_study/lesson7_2/calculator/: CMakeLists.txt
迈向Modern_CMake/cmake_study/: CMakeLists.txt
迈向Modern_CMake/cmake_study/lesson5_1/: CMakeLists.txt
静态库和动态库/: CMakeLists.txt
静态库和动态库/lesson2_1/: CMakeLists.txt  main.cpp
静态库和动态库/lesson2_1/add/: CMakeLists.txt
静态库和动态库/lesson2_1/lib/: add_static.lib
静态库和动态库/lesson2_2/: CMakeLists.txt  main.cpp
静态库和动态库/lesson2_2/add/: CMakeLists.txt  add.cpp
静态库和动态库/lesson2_opencv/: CMakeLists.txt  main.cpp
(+14 files in other folders)
